// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-chip component renders label should render clickable 1`] = `
<ic-chip clickable="true" dismissible="true" href="/" label="Label">
  <mock:shadow-root>
    <div class="container">
      <a class="chip clickable default dismissible filled" href="/" hreflang="" tabindex="0">
        <div class="content-container">
          <div class="icon">
            <slot name="icon"></slot>
          </div>
          <ic-typography class="label" variant="label">
            <span>
              Label
            </span>
          </ic-typography>
        </div>
      </a>
      <ic-tooltip label="Dismiss" target="dismiss-icon">
        <button aria-label="Dismiss Label" class="dismiss-icon" id="dismiss-icon" tabindex="0">
          svg
        </button>
      </ic-tooltip>
    </div>
  </mock:shadow-root>
  <svg fill="none" height="20" slot="icon" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
    <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 3C11.66 3 13 4.34 13 6C13 7.66 11.66 9 10 9C8.34 9 7 7.66 7 6C7 4.34 8.34 3 10 3ZM10 17.2C7.5 17.2 5.29 15.92 4 13.98C4.03 11.99 8 10.9 10 10.9C11.99 10.9 15.97 11.99 16 13.98C14.71 15.92 12.5 17.2 10 17.2Z" fill="currentColor"></path>
  </svg>
</ic-chip>
`;

exports[`ic-chip component renders label should render disabled 1`] = `
<ic-chip clickable="true" disabled="true" dismissible="true" label="Label">
  <mock:shadow-root>
    <div class="container">
      <button aria-disabled="true" class="chip default disabled dismissible filled" disabled="" tabindex="0">
        <div class="content-container">
          <div class="icon">
            <slot name="icon"></slot>
          </div>
          <ic-typography class="label" variant="label">
            <span>
              Label
            </span>
          </ic-typography>
        </div>
      </button>
      <ic-tooltip class="tooltip-disabled" label="Dismiss" target="dismiss-icon">
        <button aria-label="Dismiss Label" class="dismiss-icon" disabled="" id="dismiss-icon" tabindex="-1">
          svg
        </button>
      </ic-tooltip>
    </div>
  </mock:shadow-root>
  <svg fill="none" height="20" slot="icon" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
    <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 3C11.66 3 13 4.34 13 6C13 7.66 11.66 9 10 9C8.34 9 7 7.66 7 6C7 4.34 8.34 3 10 3ZM10 17.2C7.5 17.2 5.29 15.92 4 13.98C4.03 11.99 8 10.9 10 10.9C11.99 10.9 15.97 11.99 16 13.98C14.71 15.92 12.5 17.2 10 17.2Z" fill="currentColor"></path>
  </svg>
</ic-chip>
`;

exports[`ic-chip component renders label should render dismissible 1`] = `
<ic-chip dismissible="true" label="Label">
  <mock:shadow-root>
    <div class="container">
      <div class="chip default dismissible filled" tabindex="-1">
        <div class="content-container">
          <div class="icon">
            <slot name="icon"></slot>
          </div>
          <ic-typography class="label" variant="label">
            <span>
              Label
            </span>
          </ic-typography>
        </div>
      </div>
      <ic-tooltip label="Dismiss" target="dismiss-icon">
        <button aria-label="Dismiss Label" class="dismiss-icon" id="dismiss-icon" tabindex="0">
          svg
        </button>
      </ic-tooltip>
    </div>
  </mock:shadow-root>
  <svg fill="none" height="20" slot="icon" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
    <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 3C11.66 3 13 4.34 13 6C13 7.66 11.66 9 10 9C8.34 9 7 7.66 7 6C7 4.34 8.34 3 10 3ZM10 17.2C7.5 17.2 5.29 15.92 4 13.98C4.03 11.99 8 10.9 10 10.9C11.99 10.9 15.97 11.99 16 13.98C14.71 15.92 12.5 17.2 10 17.2Z" fill="currentColor"></path>
  </svg>
</ic-chip>
`;

exports[`ic-chip component renders label should render small 1`] = `
<ic-chip clickable="true" dismissible="true" label="Label" size="small">
  <mock:shadow-root>
    <div class="container">
      <button class="chip clickable dismissible filled small" tabindex="0">
        <div class="content-container">
          <div class="icon">
            <slot name="icon"></slot>
          </div>
          <ic-typography class="label" variant="label">
            <span>
              Label
            </span>
          </ic-typography>
        </div>
      </button>
      <ic-tooltip label="Dismiss" target="dismiss-icon">
        <button aria-label="Dismiss Label" class="dismiss-icon" id="dismiss-icon" tabindex="0">
          svg
        </button>
      </ic-tooltip>
    </div>
  </mock:shadow-root>
  <svg fill="none" height="20" slot="icon" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
    <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 3C11.66 3 13 4.34 13 6C13 7.66 11.66 9 10 9C8.34 9 7 7.66 7 6C7 4.34 8.34 3 10 3ZM10 17.2C7.5 17.2 5.29 15.92 4 13.98C4.03 11.99 8 10.9 10 10.9C11.99 10.9 15.97 11.99 16 13.98C14.71 15.92 12.5 17.2 10 17.2Z" fill="currentColor"></path>
  </svg>
</ic-chip>
`;

exports[`ic-chip component renders label should render static 1`] = `
<ic-chip label="Label">
  <mock:shadow-root>
    <div class="container">
      <div class="chip default filled" tabindex="-1">
        <div class="content-container">
          <div class="icon">
            <slot name="icon"></slot>
          </div>
          <ic-typography class="label" variant="label">
            <span>
              Label
            </span>
          </ic-typography>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <svg fill="none" height="20" slot="icon" viewBox="0 0 20 20" width="20" xmlns="http://www.w3.org/2000/svg">
    <path d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM10 3C11.66 3 13 4.34 13 6C13 7.66 11.66 9 10 9C8.34 9 7 7.66 7 6C7 4.34 8.34 3 10 3ZM10 17.2C7.5 17.2 5.29 15.92 4 13.98C4.03 11.99 8 10.9 10 10.9C11.99 10.9 15.97 11.99 16 13.98C14.71 15.92 12.5 17.2 10 17.2Z" fill="currentColor"></path>
  </svg>
</ic-chip>
`;

exports[`ic-chip component renders label should render with a link parent 1`] = `
<ic-chip clickable="true" dismissible="true" label="Label">
  <mock:shadow-root>
    <div class="container">
      <div class="chip clickable default dismissible filled" tabindex="-1">
        <div class="content-container">
          <ic-typography class="label" variant="label">
            <span>
              Label
            </span>
          </ic-typography>
        </div>
      </div>
      <ic-tooltip label="Dismiss" target="dismiss-icon">
        <button aria-label="Dismiss Label" class="dismiss-icon" id="dismiss-icon" tabindex="0">
          svg
        </button>
      </ic-tooltip>
    </div>
  </mock:shadow-root>
</ic-chip>
`;
